2004-05-10 Magnus Hagdorn
 * added spot variables (generate_ncvars.py, ncdf_vars.def, ncdf.f90.in, ncdf_file.f90.in)
 * bin2ncdf.f90: does 3D now as well, there is a bug with the 0D time series.
 * input2ncdf.f90: start of a tool to convert glimmer input files to netCDF file

2004-05-08 Magnus Hagdorn
 * first round of netCDF stuff
   generate_ncvars.py: code generator taking netCDF file description
	(ncdf_vars.def) to produce f90 files from inputfiles .f90.in
	ncdf.f90.in basic data structures
	ncdf_file.f90.in file I/O operations
 * bin2ncdf.f90: testing netCDF stuff and converting old datafiles 
	(2D only at the moment) to new netCDF

2004-04-27 Ian Rutt
 * Added doc comments to gmt.f90
 * Updated return value documentation throughout to !*RV
 * Other minor documentation and formatting changes
 * Moved glimmer_params initialisation to type definition
	in line with move to f95, and added null 
	initialisation for pointer arrays. (glimmer.f90)
 * Checked all elements of glimmer_params correctly
	included in restart routines and in consistent
	order. This should work OK, but hasn't been tested...

2004-04-26 Ian Rutt
 * Merged port_to_nag branch into HEAD
 * Extended interpolation routines (glimmer_interp.f90) to include 
	averaging high-resolution global field onto local
	grid. Also generalised find_ll_index somewhat to cope 
	with longitudes that have limits other than 0->360 
	(e.g. 180->360, 0->180). This may need more work, though.
 * Added matlab visualisation routines to the repository.

2004-04-19 Magnus Hagdorn
 * added ChangeLog
 * added NAG f95 makros
 * new build system (using Python script to work out module dependencies)
 * reduced number of time slices in example code to 10000yrs
 * made kind rk=dp (rather than 8)
 * (glimmer_outp.f90) integer array index
 * added SUN WS f95 makros
 * (glimmer_restart.f90, glimmer_interp.f90) workaround for SUN WS compiler bug
 * (glimmer.f90, glimmer_velo.f90) avoid division by zero